corrected a css issue on the article and made the expand collapsetext dynamic on the button

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -8,7 +8,7 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 580px;
+  height: 60px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 
@@ -42,7 +42,10 @@
 }
 
 .article-open {
-  height: 400px;
+  height: auto; /* Corrected this because when an article is open,
+                   it should be able to show all of the text (no matter
+                   the article size). 400px isn't flexible, so it won't
+                   allow that. - Darren Tebo */
 }
 
 
