--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@
   border-radius: 10px;
   background-color: white;
   position: relative;
-  height: 580px;
+  height: 60px;
   overflow: hidden;
   box-shadow: 2px 2px 2px lightgrey;
 }
@@ -74,7 +74,40 @@
   background-color: white;
 }
 .article-open {
-  height: 400px;
+  height: auto;
+  /* Corrected this because when an article is open,
+                   it should be able to show all of the text (no matter
+                   the article size). 400px isn't flexible, so it won't
+                   allow that. - Darren Tebo */
+}
+.menu-button {
+  position: absolute;
+  left: 20px;
+  cursor: pointer;
+}
+.menu {
+  display: none;
+  position: fixed;
+  top: 75px;
+  left: 0;
+  width: 350px;
+  height: 100vh;
+  /* This give the height 100% of the screen or, '100% of View Height' */
+  background-color: #81C784;
+  border: 1px solid #004D40;
+  border-left: none;
+  border-bottom: none;
+  z-index: 2;
+  /* This set the layer level of the element, it has precendence over initial level of 1*/
+}
+.menu ul li {
+  list-style-type: none;
+  font-size: 32px;
+  padding: 30px 0;
+  text-align: center;
+}
+.menu--open {
+  display: block;
 }
 html,
 body {
